--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,100 +11,111 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./CSS/style.css">
 </head>
+
 <body>
-    
+
     <!-- Верхняя линия -->
     <header>
-            <nav class="div-list">
-                <a href="" class="logo-WebStudio"><span class="logo-link-web">Web</span><span class="logo-link-studio">Studio</span></a>
-                <ul class="div-list-navigation">
-                    <li><a href="">Студия</a></li>
-                    <li><a href="">Портфолио</a></li>
-                    <li><a href="">Контакты</a></li>
-                </ul>
-            </nav>
-                <ul class="div-list-contacts">
-                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a href="tel:++380961111111">+38 096 111 11 11</a></li>
-                </ul>
+        <nav class="div-list">
+            <a href="" class="logo-WebStudio"><span class="logo-link-web">Web</span><span
+                    class="logo-link-studio">Studio</span></a>
+            <ul class="div-list-navigation">
+                <li class="div-list-navigation-item"><a href=""><span>Студия</span></a></li>
+                <li class="div-list-navigation-item"><a href=""><span>Портфолио</span></a></li>
+                <li class="div-list-navigation-item"><a href=""><span>Контакты</span></a></li>
+            </ul>
+        </nav>
+        <ul class="div-list-contacts">
+            <li><a href="mailto:info@devstudio.com" class="div-list-contacts-mail">info@devstudio.com</a></li>
+            <li><a href="tel:++380961111111" class="div-list-contacts-tel">+38 096 111 11 11</a></li>
+        </ul>
     </header>
 
     <!-- Тело -->
     <main>
 
         <!-- Шапка -->
-            <h1>Эффективные решения для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
-
+        <div class="div-hero">
+            <h1 class="div-hero-tagline">Эффективные решения для вашего бизнеса</h1>
+            <button type="button" class="div-hero-button"><span class="div-hero-text">Заказать услугу</span></button>
+        </div>
         <!-- Особенности -->
-        <section>
-            <ul>
-                <li>
-                    <h3>Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p></li>
-                <li>
-                    <h3>Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+        <section class="section-features">
+            <ul class="section-features-list">
+                <li class="features-list">
+                    <h3 class="features-title">Внимание к деталям</h3>
+                    <p class="features-discription">Идейные соображения, а также начало повседневной работы по
+                        формированию позиции.</p>
                 </li>
-                <li>
-                    <h3>Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                <li class="features-list">
+                    <h3 class="features-title">Пунктуальность</h3>
+                    <p class="features-discription">Задача организации, в особенности же рамки и место обучения кадров
+                        влечет за собой.</p>
                 </li>
-                    <li>
-                        <h3>Современные технологии</h3>
-                        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-                    </li>
+                <li class="features-list">
+                    <h3 class="features-title">Планирование</h3>
+                    <p class="features-discription">Равным образом консультация с широким активом в значительной степени
+                        обуславливает.</p>
+                </li>
+                <li class="features-list">
+                    <h3 class="features-title">Современные технологии</h3>
+                    <p class="features-discription">Значимость этих проблем настолько очевидна, что реализация плановых
+                        заданий.</p>
+                </li>
             </ul>
         </section>
 
-        <!-- Особенности -->
+        <!-- Чем мы занимаемся -->
         <section>
-            <h2>Чем мы занимаемся</h2>
-            <ul>
-                <li><img src="./images/img1.jpg" alt="руки на клавиатуре, перед экраном" width=370></li>
-                <li><img src="./images/img2.jpg" alt="смартфон в руке перед ноутбуком" width=370></li>
-                <li><img src="./images/img3.jpg" alt="цветовая палитра на планшете" width=370></li>
+            <h2 class="section-heading">Чем мы занимаемся</h2>
+            <ul class="photo-box">
+                <li class="photo-title"><img src="./images/img1.jpg" alt="руки на клавиатуре, перед экраном" width=370>
+                </li>
+                <li class="photo-title"><img src="./images/img2.jpg" alt="смартфон в руке перед ноутбуком" width=370>
+                </li>
+                <li class="photo-title"><img src="./images/img3.jpg" alt="цветовая палитра на планшете" width=370></li>
             </ul>
         </section>
 
         <!-- Наша команда -->
         <section>
-            <h2>Наша команда</h2>
-            <ul>
-                <li>
-                    <img src="./images/фотоИгорьДемьяненко.jpg" alt="фото Игорь Демьяненко" width=270>
-                    <h3>Игорь Демьяненко</h3> 
-                    <p>Product Designer</p>
+            <h2 class="section-heading">Наша команда</h2>
+            <ul class="section-team">
+                <li class="team-list">
+                    <img class="team-photo" src="./images/фотоИгорьДемьяненко.jpg" alt="фото Игорь Демьяненко"
+                        width=270>
+                    <h3 class="team-name">Игорь Демьяненко</h3>
+                    <p class="team-position">Product Designer</p>
                 </li>
-                <li>
-                    <img src="./images/фотоОльгаРепина.jpg" alt="фото Ольга Репина" width=270>
-                    <h3>Ольга Репина</h3>
-                    <p>Frontend Developer</p>                 
+                <li class="team-list">
+                    <img class="team-photo" src="./images/фотоОльгаРепина.jpg" alt="фото Ольга Репина" width=270>
+                    <h3 class="team-name">Ольга Репина</h3>
+                    <p class="team-position">Frontend Developer</p>
                 </li>
-                <li>
-                    <img src="./images/фотоНиколайТарасов.jpg" alt="фото Николай Тарасов" width=270>
-                    <h3>Николай Тарасов</h3>
-                    <p>Marketing</p>
+                <li class="team-list">
+                    <img class="team-photo" src="./images/фотоНиколайТарасов.jpg" alt="фото Николай Тарасов" width=270>
+                    <h3 class="team-name">Николай Тарасов</h3>
+                    <p class="team-position">Marketing</p>
                 </li>
-                <li>
-                    <img src="./images/фотоМихаилЕрмаков.jpg" alt="фото Михаил Ермаков" width=270>
-                    <h3>Михаил Ермаков</h3>
-                    <p>UI Designer</p>
+                <li class="team-list">
+                    <img class="team-photo" src="./images/фотоМихаилЕрмаков.jpg" alt="фото Михаил Ермаков" width=270>
+                    <h3 class="team-name">Михаил Ермаков</h3>
+                    <p class="team-position">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
 
     <!-- Подвал -->
-    <footer>
-        <!-- copyright, atc -->
-        <a href="">WebStudio</a>
-        <address>г. Киев, пр-т Леси Украинки, 26</address>
-        <ul>
-            <li><a href="mailto:info@example.com">info@example.com</a></li>
-            <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+    <footer class="footer-contacts-list">
+        <a class="logo-WebStudio" href="#">WebStudio</a>
+        <address class="footer-contacts-address">г. Киев, пр-т Леси Украинки, 26</address>
+        <ul class="contacts-list">
+            <li class="contacts-title"><a class="contacts-title-mail"
+                    href="mailto:info@example.com">info@example.com</a></li>
+            <li class="contacts-title"><a class="contacts-title-tel" href="tel:+380991111111">+38 099 111 11 11</a></li>
         </ul>
     </footer>
-    
+
 </body>
 </html>
