--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <!-- Верхняя линия -->
     <header>
         <nav class="div-list">
-            <a href="" class="logo-WebStudio"><span class="logo-link-web">Web</span><span
+            <a href="./index.html" class="logo-WebStudio"><span class="logo-link-web">Web</span><span
                     class="logo-link-studio">Studio</span></a>
             <ul class="div-list-navigation">
-                <li class="div-list-navigation-item"><a href=""><span>Студия</span></a></li>
-                <li class="div-list-navigation-item"><a href=""><span>Портфолио</span></a></li>
-                <li class="div-list-navigation-item"><a href=""><span>Контакты</span></a></li>
+                <li class="div-list-navigation-item"><a href="./index.html"><span class="nav-studio">Студия</span></a></li>
+                <li class="div-list-navigation-item"><a href="./portfolio.html"><span class="">Портфолио</span></a></li>
+                <li class="div-list-navigation-item"><a href=""><span class="nav-contacts">Контакты</span></a></li>
             </ul>
         </nav>
         <ul class="div-list-contacts">
@@ -33,13 +33,14 @@
 
     <!-- Тело -->
     <main>
-
+        
         <!-- Шапка -->
         <div class="div-hero">
             <h1 class="div-hero-tagline">Эффективные решения для вашего бизнеса</h1>
             <button type="button" class="div-hero-button"><span class="div-hero-text">Заказать услугу</span></button>
         </div>
         <!-- Особенности -->
+        <h2 class="features">Особенности</h2>
         <section class="section-features">
             <ul class="section-features-list">
                 <li class="features-list">
@@ -107,14 +108,16 @@
     </main>
 
     <!-- Подвал -->
-    <footer class="footer-contacts-list">
-        <a class="logo-WebStudio" href="#">WebStudio</a>
-        <address class="footer-contacts-address">г. Киев, пр-т Леси Украинки, 26</address>
-        <ul class="contacts-list">
-            <li class="contacts-title"><a class="contacts-title-mail"
-                    href="mailto:info@example.com">info@example.com</a></li>
-            <li class="contacts-title"><a class="contacts-title-tel" href="tel:+380991111111">+38 099 111 11 11</a></li>
-        </ul>
+    <footer>
+        <div class="footer-contacts-list">
+            <a href="./index.html" class="logo-WebStudio"><span class="logo-link-web">Web</span>Studio</span></a>
+            <address class="footer-contacts-address">г. Киев, пр-т Леси Украинки, 26</address>
+            <ul class="contacts-list">
+                <li class="contacts-title"><a class="contacts-title-mail"
+                        href="mailto:info@example.com">info@example.com</a></li>
+                <li class="contacts-title"><a class="contacts-title-tel" href="tel:+380991111111">+38 099 111 11 11</a></li>
+            </ul>
+        </div>
     </footer>
 
 </body>
