--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&family=Roboto:wght@100&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet"/>
     <link rel="stylesheet" href="./CSS/style.css">
 </head>
 
@@ -17,8 +17,7 @@
     <!-- Верхняя линия -->
     <header>
         <nav class="div-list">
-            <a href="./index.html" class="logo-WebStudio"><span class="logo-link-web">Web</span><span
-                    class="logo-link-studio">Studio</span></a>
+            <a href="./index.html" class="logo-WebStudio"><span class="logo-link-web">Web</span><span class="logo-link-studio">Studio</span></a>
             <ul class="div-list-navigation">
                 <li class="div-list-navigation-item"><a href="./index.html"><span class="nav-studio">Студия</span></a></li>
                 <li class="div-list-navigation-item"><a href="./portfolio.html"><span class="">Портфолио</span></a></li>
@@ -110,7 +109,7 @@
     <!-- Подвал -->
     <footer>
         <div class="footer-contacts-list">
-            <a href="./index.html" class="logo-WebStudio"><span class="logo-link-web">Web</span>Studio</span></a>
+            <a href="./index.html" class="logo-WebStudio"><span class="logo-link-web">Web</span>Studio</a>
             <address class="footer-contacts-address">г. Киев, пр-т Леси Украинки, 26</address>
             <ul class="contacts-list">
                 <li class="contacts-title"><a class="contacts-title-mail"
