--- a/portfolio.html
+++ b/portfolio.html
@@ -7,51 +7,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&family=Roboto:wght@100&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet"/>
     <link rel="stylesheet" href="./CSS/style.css">
 </head>
 
 <body>
 
     <!-- Верхняя линия -->
-    <header>
+    <header class="upper-line">
+        <h2 class="features">Навигация по проэктам</h2>
+        <a href="./index.html" class="logo-WebStudio"><span class="logo-link-web">Web</span><span class="logo-link-studio">Studio</span></a>
         <nav class="div-list">
-            <a href="./index.html" class="logo-WebStudio"><span class="logo-link-web">Web</span><span
-                    class="logo-link-studio">Studio</span></a>
             <ul class="div-list-navigation">
-                <li class="div-list-navigation-item"><a href="./index.html"><span class="">Студия</span></a></li>
-                <li class="div-list-navigation-item"><a href="./portfolio.html"><span
-                            class="nav-portfolio">Портфолио</span></a></li>
-                <li class="div-list-navigation-item"><a href=""><span class="nav-contacts">Контакты</span></a></li>
+                <li><a href="./index.html">
+                        <span class="">Студия</span>
+                    </a>
+                </li>
+                <li><a href="./portfolio.html">
+                        <span class="nav-portfolio">Портфолио</span>
+                    </a>
+                </li>
+                <li><a href="">
+                        <span class="nav-contacts">Контакты</span>
+                    </a>
+                </li>
             </ul>
         </nav>
-        <ul class="div-list-contacts">
-            <li><a href="mailto:info@devstudio.com" class="div-list-contacts-mail">info@devstudio.com</a></li>
-            <li><a href="tel:++380961111111" class="div-list-contacts-tel">+38 096 111 11 11</a></li>
-        </ul>
+            <ul class="div-list-contacts">
+                <li><a href="mailto:info@devstudio.com" class="div-list-contacts-mail-portfolio">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="div-list-contacts-tel">+38 096 111 11 11</a></li>
+            </ul>
     </header>
 
     <!-- Тело -->
     <main>
 
-        <h1>Портфолио</h1>
+        
 
         <!-- Навигация -->
-        <section>
-            <ul>
-                <li><button type="button">Все</button></li>
-                <li><button type="button">Веб-сайты</button></li>
-                <li><button type="button">Приложения</button></li>
-                <li><button type="button">Дизайн</button></li>
-                <li><button type="button">Маркетинг</button></li>
+        <section class="button-nav-portfolio">
+            <h1 class="features">Портфолио</h1>
+            <ul class="work-nav-button">
+                <li><button type="button" class="work-nav-button">Все</button>
+                </li>
+                <li><button type="button">Веб-сайты</button>
+                </li>
+                <li><button type="button">Приложения</button>
+                </li>
+                <li><button type="button">Дизайн</button>
+                </li>
+                <li><button type="button">Маркетинг</button>
+                </li>
             </ul>
         </section>
 
         <!-- Проэкты -->
         
-        <section>
-            <h2>Примеры работ</h1>
+        <section class="work-presentation">
+            <h2 class="features">Примеры работ</h2>
             <ul>
                 <li>
                     <img src="./images/tehnokryak.jpg" alt="презентация сайта на компьютере" width="370">
