--- a/index.html
+++ b/index.html
@@ -7,77 +7,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-        rel="stylesheet"/>
-    <link rel="stylesheet" href="./CSS/style.css">
+        rel="stylesheet">
+    <link rel="stylesheet" href="./CSS/styles.css">
 </head>
 
 <body>
 
-    <!-- Верхняя линия -->
-    <header class="upper-line">
-        <a href="./index.html" class="logo-WebStudio"><span class="logo-link-web">Web</span><span class="logo-link-studio">Studio</span></a>
-        <nav class="div-list">
-            <ul class="div-list-navigation">
-                <li><a href="./index.html">
-                        <span class="nav-studio">Студия</span>
-                    </a>
-                </li>
-                <li><a href="./portfolio.html">
-                        <span class="">Портфолио</span>
-                    </a>
-                </li>
-                <li><a href="">
-                        <span class="nav-contacts">Контакты</span>
-                    </a>
-                </li>
+    <!-- Шапка -->
+    <header class="header">
+        <nav>
+            <a href="./index.html" class="logo">Web<span class="header-logo-studio">Studio</span>
+            </a>
+
+            <ul class="site-nav list">
+                <li><a href="./index.html" class="link">Студия</a></li>
+                <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+                <li><a href="" class="link">Контакты</a></li>
             </ul>
+        
+            <ul class="auth-nav list">
+                <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+            </ul>
+
         </nav>
-            <ul class="div-list-contacts">
-                <li><a href="mailto:info@devstudio.com" class="div-list-contacts-mail">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="div-list-contacts-tel">+38 096 111 11 11</a></li>
-            </ul>
     </header>
 
     <!-- Тело -->
     <main>
         
-        <!-- Шапка -->
-        <div class="div-hero">
-            <h1 class="div-hero-tagline">Эффективные решения для вашего бизнеса</h1>
-            <button type="button" class="div-hero-button"><span class="div-hero-text">Заказать услугу</span></button>
+        <!-- Герой -->
+        <div class="hero">
+            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+            <button type="button" class=" button primary">Заказать услугу</button>
         </div>
+
         <!-- Особенности -->
-        <h2 class="features">Особенности</h2>
-        <section class="section-features">
-            <ul>
-                <li class="features-list">
-                    <h3 class="features-title">Внимание к деталям</h3>
-                    <p class="features-discription">Идейные соображения, а также начало повседневной работы по
+        <section class="section">
+
+            <!-- <h2 class="section-title">Особенности</h2> -->
+
+            <ul class="feature-list list">
+                <li>
+                    <h3 class="title">Внимание к деталям</h3>
+                    <p class="text">Идейные соображения, а также начало повседневной работы по
                         формированию позиции.</p>
                 </li>
-                <li class="features-list">
-                    <h3 class="features-title">Пунктуальность</h3>
-                    <p class="features-discription">Задача организации, в особенности же рамки и место обучения кадров
+                <li>
+                    <h3 class="title">Пунктуальность</h3>
+                    <p class="text">Задача организации, в особенности же рамки и место обучения кадров
                         влечет за собой.</p>
                 </li>
-                <li class="features-list">
-                    <h3 class="features-title">Планирование</h3>
-                    <p class="features-discription">Равным образом консультация с широким активом в значительной степени
+                <li>
+                    <h3 class="title">Планирование</h3>
+                    <p class="text">Равным образом консультация с широким активом в значительной степени
                         обуславливает.</p>
                 </li>
-                <li class="features-list">
-                    <h3 class="features-title">Современные технологии</h3>
-                    <p class="features-discription">Значимость этих проблем настолько очевидна, что реализация плановых
+                <li>
+                    <h3 class="title">Современные технологии</h3>
+                    <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых
                         заданий.</p>
                 </li>
             </ul>
         </section>
 
         <!-- Чем мы занимаемся -->
-        <section>
-            <h2 class="section-heading">Чем мы занимаемся</h2>
-            <ul class="photo-box">
+
+        <section class="section">
+
+            <h2 class="section-title">Чем мы занимаемся</h2>
+
+            <ul class="work list">
                 <li><img src="./images/img1.jpg" alt="руки на клавиатуре, перед экраном" width=370>
                 </li>
                 <li><img src="./images/img2.jpg" alt="смартфон в руке перед ноутбуком" width=370>
@@ -88,29 +90,32 @@
         </section>
 
         <!-- Наша команда -->
-        <section>
-            <h2 class="section-heading">Наша команда</h2>
-            <ul class="section-team">
+
+        <section class="section">
+
+            <h2 class="section-title">Наша команда</h2>
+
+            <ul class="our-team list">
                 <li>
                     <img src="./images/фотоИгорьДемьяненко.jpg" alt="фото Игорь Демьяненко"
                         width=270>
-                    <h3 class="team-name">Игорь Демьяненко</h3>
-                    <p class="team-position">Product Designer</p>
+                    <h3 class="name">Игорь Демьяненко</h3>
+                    <p class="position">Product Designer</p>
                 </li>
                 <li>
                     <img src="./images/фотоОльгаРепина.jpg" alt="фото Ольга Репина" width=270>
-                    <h3 class="team-name">Ольга Репина</h3>
-                    <p class="team-position">Frontend Developer</p>
+                    <h3 class="name">Ольга Репина</h3>
+                    <p class="position">Frontend Developer</p>
                 </li>
                 <li>
                     <img src="./images/фотоНиколайТарасов.jpg" alt="фото Николай Тарасов" width=270>
-                    <h3 class="team-name">Николай Тарасов</h3>
-                    <p class="team-position">Marketing</p>
+                    <h3 class="name">Николай Тарасов</h3>
+                    <p class="position">Marketing</p>
                 </li>
                 <li>
                     <img src="./images/фотоМихаилЕрмаков.jpg" alt="фото Михаил Ермаков" width=270>
-                    <h3 class="team-name">Михаил Ермаков</h3>
-                    <p class="team-position">UI Designer</p>
+                    <h3 class="name">Михаил Ермаков</h3>
+                    <p class="position">UI Designer</p>
                 </li>
             </ul>
         </section>
@@ -118,12 +123,12 @@
 
     <!-- Подвал -->
     <footer>
-        <div class="footer-contacts-list">
-            <a href="./index.html" class="logo-WebStudio"><span class="logo-link-web">Web</span>Studio</a>
-            <address class="footer-contacts-address">г. Киев, пр-т Леси Украинки, 26</address>
-            <ul class="contacts-list">
-                <li><a class="contacts-title-mail" href="mailto:info@example.com">info@example.com</a></li>
-                <li><a class="contacts-title-tel" href="tel:+380991111111">+38 099 111 11 11</a></li>
+        <div class="footer">
+            <a href="./index.html" class="logo">Web<span class="footer-logo-studio">Studio</span></a>
+            <address class="footer-address">г. Киев, пр-т Леси Украинки, 26</address>
+            <ul class="contacts list">
+                <li><a class="contacts-list" href="mailto:info@example.com">info@example.com</a></li>
+                <li><a class="contacts-list" href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
         </div>
     </footer>
