--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
         <!-- Герой -->
         <div class="hero">
             <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-            <button type="button" class=" button primary">Заказать услугу</button>
+            <button type="button" class="button primary">Заказать услугу</button>
         </div>
 
         <!-- Особенности -->
         <section class="section">
 
-            <!-- <h2 class="section-title">Особенности</h2> -->
+            <h2 class="visually-hidden">Особенности</h2>
 
             <ul class="feature-list list">
                 <li>
@@ -122,14 +122,17 @@
     </main>
 
     <!-- Подвал -->
+
     <footer>
         <div class="footer">
             <a href="./index.html" class="logo">Web<span class="footer-logo-studio">Studio</span></a>
-            <address class="footer-address">г. Киев, пр-т Леси Украинки, 26</address>
-            <ul class="contacts list">
-                <li><a class="contacts-list" href="mailto:info@example.com">info@example.com</a></li>
-                <li><a class="contacts-list" href="tel:+380991111111">+38 099 111 11 11</a></li>
-            </ul>
+            <address class="footer-address">
+                <p>г. Киев, пр-т Леси Украинки, 26</p>
+                <ul class="contacts list">
+                    <li><a class="contacts-list" href="mailto:info@example.com">info@example.com</a></li>
+                    <li><a class="contacts-list" href="tel:+380991111111">+38 099 111 11 11</a></li>
+                </ul>
+            </address>
         </div>
     </footer>
 
